@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpd/Attic/libmpd-0.13.0.ebuild,v 1.4 2007/04/15 11:21:37 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpd/Attic/libmpd-0.13.0.ebuild,v 1.5 2007/04/17 15:54:22 gustavoz Exp $
 
 DESCRIPTION="A library handling connection to a MPD server."
 HOMEPAGE="http://sarine.nl/libmpd"
@@ -8,7 +8,7 @@ SRC_URI="http://download.sarine.nl/gmpc-0.14.0/${P}.tar.gz"
 LICENSE="GPL-2"
 
 SLOT="0"
-KEYWORDS="amd64 ppc ~sparc x86"
+KEYWORDS="amd64 ppc sparc x86"
 IUSE=""
 
 src_compile() {
