@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gmpc/Attic/gmpc-0.14.0.ebuild,v 1.4 2007/04/15 11:23:16 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gmpc/Attic/gmpc-0.14.0.ebuild,v 1.5 2007/04/17 15:55:17 gustavoz Exp $
 
 IUSE="gnome session"
 
@@ -8,7 +8,7 @@ DESCRIPTION="A Gnome client for the Music Player Daemon."
 HOMEPAGE="http://sarine.nl/gmpc"
 SRC_URI="http://download.sarine.nl/${P}/${P}.tar.gz"
 
-KEYWORDS="amd64 ppc ~sparc x86"
+KEYWORDS="amd64 ppc sparc x86"
 SLOT="0"
 LICENSE="GPL-2"
 
